postgresql-9.3 (9.3~beta1-1) UNRELEASED; urgency=low

  * Update for 9.3. Packaging based on 9.2 branch.
  * Remove 03-python-includedirs.patch, implemented upstream.
  * libpq5.symbols: Add new symbols: PQconninfo, lo_lseek64, lo_tell64,
    lo_truncate64.
  * debian/rules: Remove the temporary patches from pg_regress, and teach
    pg_regress to support unix socket dirs in --host.
  * 50-per-version-dirs.patch: Use @MAJORVERSION@ instead of a fixed version.
  * postgresql-9.3.install: Add pg_xlogdump.
  * postgresql-client-9.3.install: Add pg_isready.
  * libpq-dev.install: Add usr/lib/libpgcommon.a.
  * libpq-dev.install, libecpg-dev.install: Add pkgconfig files.
  * postgresql-contrib-9.3.install: Add
    usr/lib/postgresql/9.3/lib/postgres_fdw.so.

 -- Christoph Berg <myon@debian.org>  Fri, 15 Feb 2013 10:40:57 +0100